refactor: job service
